2021-02-17  Karl Berry  <karl@tug.org>

	* NEWS,
	* doc/web2c.texi: 2021 release.

2021-02-16  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Reshuffle byte_mem pointer.

2021-02-15  Andreas Scherer  <https://ascherer.github.io>

	* tracingstacklevels.ch,
	* ptexdir/ptex-base.ch: Fix Pascal variable in comment.

2021-02-14  Petr Olsak  <petr@olsak.net>

	* tracingstacklevels.ch: slow_print(cur_ext) also.

2021-02-13  Karl Berry  <karl@freefriends.org>

	* enctexdir/enctex1.ch,
	* enctexdir/enctex2.ch,
	* enctexdir/enctex-tex.ch,
	* enctexdir/enctex-pdftex.ch: new files, from enctex.ch.
	* am/texmf.am (tex_ch_srcs): split enctex changes into
	common (enctex1.ch, enctex2.ch) and differing (enctex-tex.ch,
	enctex-pdftex.ch) pieces to avoid duplicating the whole thing.
	* enctex.ch,
	* enctex2.ch: remove.

2021-02-13  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* eptexdir/am/eptex.am, eptexdir/etex.ch1,
	euptexdir/am/euptex.am, ptexdir/am/ptex.am,
	ptexdir/ptex-base.ch, synctexdir/synctex-ep-mem.ch1,
	synctexdir/synctex-p-mem.ch1, and uptexdir/am/uptex.am:
	Support \tracingstacklevels in [e][u]pTeX.

2021-02-13  Akira Kakuto  <kakuto@w32tex.org>

	* enctex.ch: Recover the original enctex.ch in order to be
	compatible with the TeX.
	* enctex2.ch: Rename the new enctex.ch for pdfTeX.
	* pdftexdir/am/pdftex.am: Rename enctex.ch to enctex2.ch.

2021-02-12  Karl Berry  <karl@freefriends.org>

	* tracingstacklevels.ch: new change file for \tracingstacklevels
	parameter, proposed and implemented by Petr Olsak.
	* pdftexdir/am/pdftex.am (pdftex_ch_srcs),
	* xetexdir/am/xetex.am (xetex_ch_srcs): add it.
	* tests/tracingstacklevels.tex,
	* tests/tracingstacklevel2.tex: test files (for manual use; not
	included in make check).
	* xetexdir/xetex.ch (v): new declaration needed in start_input.
	* enctex.ch: adjust web2c_int_pars so that this is applied after
	tracingstacklevels.ch.

2021-02-08  Andreas Scherer  <https://ascherer.github.io>
