@@ -62,12 +62,11 @@ nodist_ctangle_SOURCES = ctangle.c cweb.c
 # ctangle.c and cweb.c are special cases, since they are needed to compile
 # themselves.  We depend on ctangleboot, even though we might not use it.
 ctangleboot = AM_V_P=$(AM_V_P) $(SHELL) ./ctangleboot-sh $@
-ctangle.c: ctangleboot$(EXEEXT) cwebdir/comm-w2c.h cwebdir/ctangle.w cwebdir/ctang-w2c.ch ctangleboot-sh
+ctangle.c: common-ctangle cwebdir/ctangle.w cwebdir/ctang-w2c.ch
 	@$(ctangleboot) ctangle ctang-w2c
-cweb.c: common-ctangle
+cweb.c: common-ctangle cwebdir/common.w cwebdir/comm-w2c.ch
 	@$(ctangleboot) common comm-w2c cweb.c
-common-ctangle: ctangleboot$(EXEEXT) cwebdir/common.w cwebdir/comm-w2c.ch ctangleboot-sh
-	@$(ctangleboot) common comm-w2c cweb.c
+common-ctangle: ctangleboot$(EXEEXT) cwebdir/comm-w2c.h ctangleboot-sh
 EXTRA_DIST += cwebdir
 NEVER_DIST += cwebdir/cweave.log cwebdir/cweave.trs
 NEVER_DIST += cwebdir/ctwill.log cwebdir/ctwill.trs
