@@ -1,3 +1,7 @@
+2021-02-17  Andreas Scherer  <https://ascherer.github.io>
+
+	* Makefile: Main CWEB modules depend on COMMON inteface.
+
 2021-02-16  Andreas Scherer  <https://ascherer.github.io>
 
 	* common.c,
